--- a/index.html
+++ b/index.html
@@ -100,19 +100,6 @@
               <li><a href="#project">Projects</a></li>
             </ul> -->
 
-          <!--Start Publications -->
-          <!-- <h2 id="journal-paper">Publications</h2>
-          <hr>
-          <p class="text-small-margin">
-            <li>
-              <a href="https://coursecatalogue.uva.nl/xmlpages/page/2023-2024/zoek-vak/vak/110339" target="_blank">Information Visualization</a>, 2022/2023, Informatics Institute, University of Amsterdam
-            </li>
-            <li>
-              <a href="https://multix.io/data-science-book-uva/" target="_blank">Data Science</a>, 2022/2023, Informatics Institute, University of Amsterdam
-            </li>
-          </p> -->
-
-          <!-- COONF -->
           <h2 id="journal-paper">Research interests</h2>
           <hr>
           <p class="text-small-margin">
@@ -142,32 +129,37 @@
             </div>
           </div>
 
+          <h2 id="journal-paper">Publications and preprints</h2>
+          <hr>
+          <p class="text-small-margin">
+              [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot
+          </p>
+
           <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
-              World Congress on Computational Mechanics (WCCM)</I></a> &nbsp; - &nbsp; Vancouver (Canada) &nbsp; - &nbsp;
-              July 2024 <a href=""> &nbsp; - &nbsp; <b>[PDF]</b></a><br><br>
-
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation<br> 
+              World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
+              July 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
-              (ECCOMAS)</I></a> &nbsp; - &nbsp; Lisbon (Portugal) &nbsp; - &nbsp; June 2024 &nbsp; - &nbsp; <a href=""><b>[PDF]</b></a><br><br>
+              (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024<br><br>
 
-              Unfitted HHO method stabilized by polynomial discrete extension<br> 
+              Unfitted HHO method stabilized by polynomial discrete extension - <a href=""><b>[PDF]</b></a><br> 
               <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
-              Analysis (CANUM)</I></a> &nbsp; - &nbsp; Ile de Ré (France) &nbsp; - &nbsp; May 2024 &nbsp; - &nbsp; <a href=""><b>[PDF]</b></a>
+              Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 
           </p>
+
           <h2 id="journal-paper">Posters</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
-              <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> &nbsp; - &nbsp; 
-              San Francisco (USA) &nbsp; - &nbsp; December 2023 &nbsp; - &nbsp; <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br><br>
-              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation<br> 
+              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
+              <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> - 
+              San Francisco (USA) - December 2023 <br>
               <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank"><I>Congress of Young Researchers in Applied Mathematics (CJCMA)</I></a> &nbsp; - &nbsp; Paris (France) &nbsp; - &nbsp;
-              September 2023 &nbsp; - &nbsp; <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
+              target="_blank"><I>Congress of Young Researchers in Applied Mathematics (CJCMA)</I></a> - Paris (France) -
+              September 2023 
           </p>
           
           <!-- Experiences -->
