--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <p class="text">
               <Div Align=justify> 
                 I am a PhD student in applied mathematics for the numerical simulation of physic problems under the direction of 
-                <a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target:"_blank"><b>Alexandre Ern</b></a> at 
-                <a href="https://cermics-lab.enpc.fr/"; style="text-decoration: none; color: black; target="_blank">CERMICS, École des Ponts ParisTech</a> 
-                and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black; target="_blank">Inria</a>. I am also 
-                co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
+                <a href="http://cermics.enpc.fr/~ern/home.html" style="text-decoration: none; color: black;" target="_blank"><b>Alexandre Ern</b></a> at 
+                <a href="https://cermics-lab.enpc.fr/" style="text-decoration: none; color: black;" target="_blank">CERMICS, École des Ponts ParisTech</a> 
+                and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black;" target="_blank">Inria</a>. I am also 
+                co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black;" target="_blank">CEA</a>.<br><br>
 
                 As a computational scientist I have a strong background in <b>numerical methods</b> with competencies in <b>numercial analysis</b> for partial differential 
                 equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or biology)</b>. I am 
@@ -85,20 +85,6 @@
                 atmospheric acoustics or the water)</b>, using the methods mentioned above.
               </Div>
             </p>
-
-            <!-- <h3>Table of Content</h3>
-            <ul>
-              <li><a href="#award">Awards and Honors</a></li>
-              <li><a href="#journal-paper">Refereed Journal and Magazine Papers</a></li>
-              <li><a href="#conference-paper">Refereed Conference Papers</a></li>
-              <li><a href="#wip-paper">Refereed Posters, Works-in-Progress, and Workshop Papers</a></li>
-              <li><a href="#other-paper">Other Publications</a></li>
-              <li><a href="#feature-media">Featured Media and Book Coverage</a></li>
-              <li><a href="#other-media">Other Media and Book Coverage</a></li>
-              <li><a href="#tool">Released Open Source Tools, Datasets, and Teaching Materials</a></li>
-              <li><a href="#teaching">Teaching</a></li>
-              <li><a href="#project">Projects</a></li>
-            </ul> -->
 
           <h2 id="journal-paper">Research interests</h2>
           <hr>
@@ -132,8 +118,11 @@
           <h2 id="journal-paper">Publications and preprints</h2>
           <hr>
           <p class="text-small-margin">
-              [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot
+            [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, L. Guillot and AE<br><br>
+            
+            [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot
           </p>
 
           <h2 id="journal-paper">Talks</h2>
