--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <h2 id="journal-paper">Publications and preprints</h2>
+          <!-- <h2 id="journal-paper">Publications and preprints</h2>
           <hr>
           <p class="text-small-margin">
             [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
@@ -123,7 +123,7 @@
             
             [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot
-          </p>
+          </p> -->
 
           <h2 id="journal-paper">Talks</h2>
           <hr>
