--- a/index_fr.html
+++ b/index_fr.html
@@ -69,10 +69,10 @@
             <hr>
             <p class="text">
               <Div Align=justify> 
-                Je suis doctorant en mathématiques appliquées pour la simulation numérique de problèmes physiques sous la direction d'<a href="http://cermics.enpc.fr/~ern/home.html"; style="text-decoration: none; color: black; target="_blank"><b>Alexandre Ern</b></a> 
-                au <a href="https://cermics-lab.enpc.fr/"; style="text-decoration: none; color: black; target="_blank">CERMICS (École des Ponts ParisTech)</a> 
-                et à l'<a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black; target="_blank">Inria</a>. Je suis également co-encadré par 
-                <b>Laurent Guillot</b> au <a href="https://www.cea.fr/english" style="text-decoration: none; color: black; target="_blank">CEA</a>.<br><br>
+                Je suis doctorant en mathématiques appliquées pour la simulation numérique de problèmes physiques sous la direction d'<a href="http://cermics.enpc.fr/~ern/home.html" style="text-decoration: none; color: black;" target="_blank"><b>Alexandre Ern</b></a> 
+                au <a href="https://cermics-lab.enpc.fr/" style="text-decoration: none; color: black;" target="_blank">CERMICS (École des Ponts ParisTech)</a>  
+                et à l'<a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black;" target="_blank">Inria</a>. Je suis également co-encadré par 
+                <b>Laurent Guillot</b> au <a href="https://www.cea.fr/english" style="text-decoration: none; color: black;" target="_blank">CEA</a>.<br><br>
 
                 En tant que numéricien, j'ai d'excellentes connaissances en <b>méthodes numériques</b>, des compétences en <b>analyse numérique</b> pour les équations aux 
                 dérivées partielles (EDP) ainsi que de <b>fortes compétences en programmation (Fortran/C++/Python/Matlab/LaTeX)</b> et en <b>physique (mécanique des fluides et 
@@ -144,32 +144,30 @@
             </div>
           </div>
 
-          <h2 id="journal-paper">Communications</h2>
+          <h2 id="journal-paper">Présentations</h2>
           <hr>
           <p class="text-small-margin">
-            <li>
-              <b>Présentations:</b>
-            </li>
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.wccm2024.org/" target="_blank">World Congress on Computational Mechanics (WCCM)</a>, 
-              Vancouver (Canada), Juillet 2024<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://eccomas2024.org/" target="_blank">European Congress on Computational 
-              Methods in Applied Sciences and Engineering (ECCOMAS)</a>, Lisbon (Portugal), Juin 2024<br>
-              <br>
-            </p>
-            <li>
-              <b>Posters:</b>
-            </li>
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.agu.org/fall-meeting" target="_blank">American Geophysical Union (AGU)</a>, 
-              San Francisco (USA), Décembre 2023 <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; <I>Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation</I><br> 
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank">Congress of Young Researchers in Applied Mathematics (CJCMA)</a>, Paris (France), Septembre 2023 <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a><br><br>
-            </p>
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+              <a href="https://www.wccm2024.org/" target="_blank"><I> 
+              World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
+              Juillet 2024 <br>
+              <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
+              (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024<br><br>
+
+              Méthode HHO non ajustée stabilisée par extension polynomiale - <a href=""><b>[PDF]</b></a><br> 
+              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
+              Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 
+          </p>
+
+          <h2 id="journal-paper">Posters</h2>
+          <hr>
+          <p class="text-small-margin">
+              Etude numérique du transfert d'énergie dans les bassins sédimentaires par des méthodes d'ordre élevé - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
+              <a href="https://www.agu.org/fall-meeting" target="_blank"><I>Congrés de géophysique américain (AGU)</I></a> - 
+              San Francisco (USA) - Decembre 2023 <br>
+              <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
+              target="_blank"><I>Congrès des Jeunes Chercheurs en Mathématiques et Applications (CJCMA)</I></a> - Paris (France) -
+              Septembre 2023 
           </p>
           
           <!-- Experiences -->
