--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <h2 id="journal-paper">Posters</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order (HHO) method for modeling and numerical simulation of elasto-acoustic wave propagation - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
+              Numerical study of energy transfer in sedimentary basins using high-order methods - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
               <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> - 
               San Francisco (USA) - December 2023 <br>
               <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
