--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024<br><br>
 
-              Unfitted HHO method stabilized by polynomial discrete extension - <a href=""><b>[PDF]</b></a><br> 
+              Unfitted HHO method stabilized by polynomial extension for elliptic interface problems - <a href=""><b>[PDF]</b></a><br> 
               <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
               Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 
           </p>
