--- a/index_fr.html
+++ b/index_fr.html
@@ -147,14 +147,14 @@
           <h2 id="journal-paper">Présentations</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+              Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel - <a href=""> <b>[PDF]</b></a><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               Juillet 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024<br><br>
 
-              Méthode HHO non ajustée stabilisée par extension polynomiale - <a href=""><b>[PDF]</b></a><br> 
+              Méthode unfitted HHO stabilisée par extension polynomiale pour les problèmes elliptiques avec interfaces  - <a href=""><b>[PDF]</b></a><br> 
               <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
               Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 
           </p>
