--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href="slides/GTNUM_MOTTIER.pdf"> <b>[PDF]</b></a><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               July 2024 <br>
