--- a/index_fr.html
+++ b/index_fr.html
@@ -147,7 +147,7 @@
           <h2 id="journal-paper">Présentations</h2>
           <hr>
           <p class="text-small-margin">
-              Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel - <a href=""> <b>[PDF]</b></a><br> 
+              Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel - <a href="slides/GTNUM_MOTTIER.pdf"> <b>[PDF]</b></a><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               Juillet 2024 <br>
