--- a/index_fr.html
+++ b/index_fr.html
@@ -128,7 +128,7 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes "unfitted"<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes des éléments finis (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes de Galerkin discontinues (et hybrides) (DG - HDG - HHO - VEM)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes de Galerkin discontinues (et hybrides) (DG - HDG - HHO)<br> 
               </p>
             </div>
           
