--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Finite Element Methods (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Discontinuous (and hybrid) Galerkin methods (DG - HDG - HHO - VEM)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Discontinuous (and hybrid) Galerkin methods (DG - HDG - HHO)<br> 
               </p>
             </div>
           
