--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
           <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href="slides/GTNUM_MOTTIER.pdf"> <b>[PDF]</b></a><br> 
+              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation <br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               July 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
-              (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024<br><br>
+              (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
-              Unfitted HHO method stabilized by polynomial extension for elliptic interface problems - <a href=""><b>[PDF]</b></a><br> 
+              Unfitted HHO method stabilized by polynomial extension for elliptic interface problems <br> 
               <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
-              Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 
+              Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b></a>
           </p>
 
           <h2 id="journal-paper">Posters</h2>
