--- a/index_fr.html
+++ b/index_fr.html
@@ -152,11 +152,10 @@
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               Juillet 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
-              (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024<br><br>
+              (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
-              Méthode unfitted HHO stabilisée par extension polynomiale pour les problèmes elliptiques avec interfaces  - <a href=""><b>[PDF]</b></a><br> 
-              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
-              Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 
+              Méthode unfitted HHO avec extension polynomiale pour les problèmes elliptiques avec interfaces <br> 
+              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b>
           </p>
 
           <h2 id="journal-paper">Posters</h2>
