--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
           <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
-              Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation <br> 
+              <b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b> <br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               July 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
-              Unfitted HHO method stabilized by polynomial extension for elliptic interface problems <br> 
+              <b>Unfitted HHO method stabilized by polynomial extension for elliptic interface problems</b><br> 
               <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
               Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b></a>
           </p>
@@ -143,12 +143,12 @@
           <h2 id="journal-paper">Posters</h2>
           <hr>
           <p class="text-small-margin">
-              Numerical study of energy transfer in sedimentary basins using high-order methods - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
+              <b>Numerical study of energy transfer in sedimentary basins using high-order methods</b> <br> 
               <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> - 
-              San Francisco (USA) - December 2023 <br>
+              San Francisco (USA) - December 2023 - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
               <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
               target="_blank"><I>Congress of Young Researchers in Applied Mathematics (CJCMA)</I></a> - Paris (France) -
-              September 2023 
+              September 2023 - <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
           </p>
           
           <!-- Experiences -->
