--- a/index_fr.html
+++ b/index_fr.html
@@ -147,26 +147,26 @@
           <h2 id="journal-paper">Présentations</h2>
           <hr>
           <p class="text-small-margin">
-              Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel - <a href="slides/GTNUM_MOTTIER.pdf"> <b>[PDF]</b></a><br> 
+              <b>Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel</b><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
               Juillet 2024 <br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
-              Méthode unfitted HHO avec extension polynomiale pour les problèmes elliptiques avec interfaces <br> 
-              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b>
+              <b>Méthode unfitted HHO avec extension polynomiale pour les problèmes elliptiques avec interfaces</b> <br> 
+              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical Analysis (CANUM)</I></a> - Ile de Ré (France) - Mai 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b></a>
           </p>
 
           <h2 id="journal-paper">Posters</h2>
           <hr>
           <p class="text-small-margin">
-              Etude numérique du transfert d'énergie dans les bassins sédimentaires par des méthodes d'ordre élevé - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
+              <b>Etude numérique du transfert d'énergie dans les bassins sédimentaires par des méthodes d'ordre élevé</b><br> 
               <a href="https://www.agu.org/fall-meeting" target="_blank"><I>Congrés de géophysique américain (AGU)</I></a> - 
-              San Francisco (USA) - Decembre 2023 <br>
+              San Francisco (USA) - Decembre 2023 - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a> <br>
               <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
               target="_blank"><I>Congrès des Jeunes Chercheurs en Mathématiques et Applications (CJCMA)</I></a> - Paris (France) -
-              Septembre 2023 
+              Septembre 2023 - <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
           </p>
           
           <!-- Experiences -->
