--- a/index_fr.html
+++ b/index_fr.html
@@ -49,7 +49,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" id="me" src="img/me3.jpg">
+            <img class="image" id="me" src="img/me_maroc.jpg">
           </div>
           <div class="flex-item flex-column">
             <h2>Romain Mottier</h2>
@@ -128,7 +128,7 @@
               <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes "unfitted"<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes des éléments finis (FEM)<br> 
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes de Galerkin discontinues (et hybrides) (DG - HDG - HHO)<br> 
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Méthodes polytopales d'ordre élevé (HHO - HDG - DG - VEM)<br> 
               </p>
             </div>
           
