--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b> <br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
-              July 2024 <br>
+              July 2024 - <a href="slides/WCCM_MOTTIER.zip"> <b>[ZIP]</b></a><br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
