--- a/index_fr.html
+++ b/index_fr.html
@@ -150,7 +150,7 @@
               <b>Méthodes hybrides d'ordre élevé (HHO) pour la propagation d'ondes élasto-acoustiques dans le domaine temporel</b><br> 
               <a href="https://www.wccm2024.org/" target="_blank"><I> 
               World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
-              Juillet 2024 <br>
+              Juillet 2024 - <a href="slides/WCCM_MOTTIER.zip"> <b>[ZIP]</b></a><br>
               <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
               (ECCOMAS)</I></a> - Lisbonne (Portugal) - Juin 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
 
