--- a/index.html
+++ b/index.html
@@ -115,15 +115,16 @@
             </div>
           </div>
 
-          <!-- <h2 id="journal-paper">Publications and preprints</h2>
+          <h2 id="journal-paper">Publications and preprints</h2>
           <hr>
           <p class="text-small-margin">
-            [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
+            <!-- [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, L. Guillot and AE<br><br>
             
             [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot
-          </p> -->
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot -->
+            Preprints soon available.
+          </p>
 
           <h2 id="journal-paper">Talks</h2>
           <hr>
