--- a/index_fr.html
+++ b/index_fr.html
@@ -102,17 +102,16 @@
               <li><a href="#project">Projects</a></li>
             </ul> -->
 
-          <!--Start Publications -->
-          <!-- <h2 id="journal-paper">Publications</h2>
-          <hr>
-          <p class="text-small-margin">
-            <li>
-              <a href="https://coursecatalogue.uva.nl/xmlpages/page/2023-2024/zoek-vak/vak/110339" target="_blank">Information Visualization</a>, 2022/2023, Informatics Institute, University of Amsterdam
-            </li>
-            <li>
-              <a href="https://multix.io/data-science-book-uva/" target="_blank">Data Science</a>, 2022/2023, Informatics Institute, University of Amsterdam
-            </li>
-          </p> -->
+            <h2 id="journal-paper">Publications et preprints</h2>
+            <hr>
+            <p class="text-small-margin">
+              <!-- [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, L. Guillot and AE<br><br>
+              
+              [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot -->
+              Preprints disponibles bientôt.
+            </p>
 
           <!-- COONF -->
           <h2 id="journal-paper">Domaines d'intérêt</h2>
