--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <style>
   li {
-    margin-bottom: -15px; /* Ajustez la valeur en fonction de l'espace souhaité */
+    margin-bottom: -15px; 
   }
   p {
-    margin-bottom: -25px; /* Ajustez la valeur en fonction de l'espace souhaité */
+    margin-bottom: -25px; 
   }
 </style>
 
@@ -74,7 +74,7 @@
                 and <a href="https://team.inria.fr/serena/" style="text-decoration: none; color: black;" target="_blank">Inria</a>. I am also 
                 co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black;" target="_blank">CEA</a>.<br><br>
 
-                As a computational scientist I have a strong background in <b>numerical methods</b> with competencies in <b>numercial analysis</b> for partial differential 
+                As a computational scientist I have a strong background in <b>numerical methods</b> with skills in <b>numerical analysis</b> for partial differential 
                 equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysiscs or biology)</b>. I am 
                 also interested in the optimization and the portability of the numerical methods on <b>high performance computing architectures (HPC)</b>.<br><br>
 
