--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
       <a href="https://github.com/romainmottier">GitHub</a>
       <a href="https://linkedin.com/in/romain-mottier-computational-physics">LinkedIn</a>
       <a href="https://www.researchgate.net/profile/Romain-Mottier-2/research">Research Gate</a>
-      <a href="https://scholar.google.com/citations?hl=fr&user=NhquH2oAAAAJ">Google Scholar</a>
+      <a href="https://scholar.google.fr/citations?user=tnQ3p_MAAAAJ&hl=fr">Google Scholar</a>
       <!-- <a href="https://orcid.org/0009-0001-2967-7694">Orcid</a> -->
       <a href="teaching.html">Teaching</a>
       <a href="index.html">ENG</a>
