--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@
           <h2 id="journal-paper">Publications and preprints</h2>
           <hr>
           <p class="text-small-margin">
-            <!-- [2] - Numerical study of energy transfer in sedimentary basins using high-order methods - <a href=""> <b>[PDF]</b></a><br> 
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, L. Guillot and AE<br><br>
-            
-            [1] - Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation - <a href=""> <b>[PDF]</b></a><br> 
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; R. Mottier, AE, R. Khot and L. Guillot -->
-            Preprints soon available.
+            <div class="col">
+              <li>
+                R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br>
+              </li>
+            </div>
           </p>
 
           <h2 id="journal-paper">Talks</h2>
