--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
           <p class="text-small-margin">
             <div class="col">
               <li>
-                R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br>
+                R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br> <br>
               </li>
             </div>
           </p>
-
           <h2 id="journal-paper">Talks</h2>
           <hr>
           <p class="text-small-margin">
