--- a/teaching.html
+++ b/teaching.html
@@ -38,6 +38,33 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
+            <!-- Teaching -->
+          <h2 id="journal-paper">Teaching</h2>
+          <hr>
+          <p class="text-small-margin"></p>
+            <li>
+              <b>Spring semester 2023 - Paris Dauphine University:</b><br>
+            </li>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2nd year of Bachelor's degree in Mathematics and Computer science <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Course : Numerical methods (Nonlinear equations, polynomial interpolation, quadrature formulas,
+              iterative and direct<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              methods for solving linear systems, eigenvalue and eigenvector computing)<br>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Teaching Assistantship: Supervision of theoretical and practical work classes<br><br><br>
+            </p>
+            <li>
+              <b>Fall semester 2022 - Paris Sorbonne University:</b><br>
+            </li>
+              <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1st year of Master's degree in Computational Mechanics <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Course : Numerical methods (Linear systems, Finite differences etc...) <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Teaching Assistantship: Supervision of practical work sessions and numerical modeling 
+                projects <br><br><br>
+              </p>
+          </p>
             <h2>2nd year of Bachelor's degree in Mathematics and Computer science,<br> Paris Dauphine University</h2>
             <hr>
             <p class="text-small-margin">
@@ -69,7 +96,7 @@
                 <p>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Numpy / Matplotlib / Jupyter notebook <a href="file/teaching/TP_Calcul_Scientifique_M1_Sorbonne/TP1/Sujet/TP1.ipynb"><b>[Notebook file]</b></a><br>
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Euler method for ODE <a href="file/teaching/TP_Calcul_Scientifique_M1_Sorbonne/TP2/Sujet/TP2.ipynb"><b>[Notebook file]</b></a><br>
-                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Numerical integration schemes for conservative systems <a href="file/teaching/TP_Calcul_Scientifique_M1_Sorbonne/TP5/TP5-2022.ipynb"><b>[Notebook file]</b></a><br>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Numerical integration schemes for conservative systems <a href="file/teaching/TP_Calcul_Scientifique_M1_Sorbonne/TP5/TP5-2022.ipynb"><b>[Notebook file]</b></a><br><br><br>
                 </p>
             </p>
             
