--- a/index.html
+++ b/index.html
@@ -113,44 +113,8 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Biology<br><br>
               </p>
             </div>
-          </div>
-
-          <h2 id="journal-paper">Publications and preprints</h2>
-          <hr>
-          <p class="text-small-margin">
-            <div class="col">
-              <li>
-                R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href=http://arxiv.org/abs/2502.10870> <b>[arXiv]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br> <br>
-              </li>
-            </div>
-          </p>
-          <h2 id="journal-paper">Talks</h2>
-          <hr>
-          <p class="text-small-margin">
-              <b>Hybrid high-order methods for time-dependent, coupled elasto-acoustic wave propagation</b> <br> 
-              <a href="https://www.wccm2024.org/" target="_blank"><I> 
-              World Congress on Computational Mechanics (WCCM)</I></a> - Vancouver (Canada) -
-              July 2024 - <a href="slides/WCCM_MOTTIER.zip"> <b>[ZIP]</b></a><br>
-              <a href="https://eccomas2024.org/" target="_blank"> <I> European Congress on Computational Methods in Applied Sciences and Engineering
-              (ECCOMAS)</I></a> - Lisbon (Portugal) - June 2024 - <a href="slides/ECCOMAS_2024.pdf"> <b>[PDF]</b></a><br><br>
-
-              <b>Unfitted HHO method with polynomial extension for elliptic interface problems</b><br> 
-              <a href="https://canum2024.math.cnrs.fr/fr/" target="_blank"> <I>National Congress of Numerical 
-              Analysis (CANUM)</I></a> - Ile de Ré (France) - May 2024 - <a href="slides/CANUM_2024.pdf"> <b>[PDF]</b></a>
-          </p>
-
-          <h2 id="journal-paper">Posters</h2>
-          <hr>
-          <p class="text-small-margin">
-              <b>Numerical study of energy transfer in sedimentary basins using high-order methods</b> <br> 
-              <a href="https://www.agu.org/fall-meeting" target="_blank"><I>American Geophysical Union (AGU)</I></a> - 
-              San Francisco (USA) - December 2023 - <a href="posters/poster_AGU.pdf"><b>[PDF]</b></a><br> 
-              <a href="https://cjcma2023.sciencesconf.org/?forward-action=index&forward-controller=index&lang=en" 
-              target="_blank"><I>Congress of Young Researchers in Applied Mathematics (CJCMA)</I></a> - Paris (France) -
-              September 2023 - <a href="posters/poster_cjcma.pdf"><b>[PDF]</b></a>
-          </p>
-          
-          <!-- Experiences -->
+          </div>         
+          <!-- Experiences
           <h2 id="journal-paper">Previous experiences</h2>
             <hr>
             <p class="text-small-margin"></p>
@@ -166,7 +130,7 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.esa.int/" target="_blank">European space agency (ESA)</a>, 
                   Nordwijck (Nederland), May - August 2020.<br><br>
                 </p>
-            </p>
+            </p> -->
           <!-- Awards
           <h2 id="award">Awards and Honors</h2>
           <hr> -->
