--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 <div class="flex-row">
                   <style>
                     .text {
-                      margin-top: -0.2cm;  /* Remonte le texte de 0.2 cm */
-                    }
+                      margin-top: -0.2cm                    }
                   </style>
                     <div class="flex-item flex-column">
                         <h2>About me</h2>
@@ -80,7 +79,7 @@
                                 co-supervised by <b>Laurent Guillot</b> at <a href="https://www.cea.fr/english" style="text-decoration: none; color: black;" target="_blank">CEA</a>.<br><br>
                                 
                                 As a computational scientist I have a strong background in <b>numerical methods</b> with skills in <b>numerical analysis</b> for partial differential 
-                                equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics (fluid and solid mechanics, geophysics or biology)</b>. I am 
+                                equations (PDEs) and <b>strong programming skills (Fortran/C++/Python/Matlab)</b> and <b>physics</b> (fluid and solid mechanics, geophysics or biology). I am 
                                 also interested in the optimization and the portability of the numerical methods on high performance computing architectures (HPC).<br><br>
                                 
                                 More specifically, my research is focused on the use of <b>non conforming hybrid high-order finite element methods (HDG/HHO)</b> especially in the context of 
@@ -101,7 +100,8 @@
                                     <p>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Unfitted methods<br>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; Finite Element Methods (FEM)<br> 
-                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; High-order polytopal methods (HHO - HDG - DG - VEM)<br> 
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - &nbsp;&nbsp; High-order polytopal methods<br> 
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (HHO - HDG - DG - VEM) 
                                     </p>
                                 </div>
                                 <div class="col">
