--- a/publications.html
+++ b/publications.html
@@ -43,14 +43,14 @@
             <p class="text-small-margin">
               <div class="col">
                 <li>
-                  E. Burman, AE and R. Mottier, <b> &nbsp; Unfitted hybrid high-order methods stabilized by polynomial extension for elliptic interface problems </b> <a href=https://hal.science/hal-04990318> <b>[HAL]
+                  E. Burman, A. Ern and R. Mottier, <b> &nbsp; Unfitted hybrid high-order methods stabilized by polynomial extension for elliptic interface problems </b> <a href=https://hal.science/hal-04990318> <b>[HAL]
 
                   <!-- </b></a> <a href=http://arxiv.org/abs/2502.10870> <b>[arXiv] -->
 
                   </b></a> <a href="articles/BEM_2025.pdf"> <b>[PDF]</b></a> <br> <br>
                 </li>
                 <li>
-                  R. Mottier, AE, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href=http://arxiv.org/abs/2502.10870> <b>[arXiv]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br> <br>
+                  R. Mottier, A. Ern, R. Khot and L. Guillot, <b> &nbsp; Hybrid high-order methods for elasto-acoustic wave propagation in the time domain </b> <a href=https://hal.science/hal-04934562v1> <b>[HAL]</b></a> <a href=http://arxiv.org/abs/2502.10870> <b>[arXiv]</b></a> <a href="articles/MEKG_2025.pdf"> <b>[PDF]</b></a> <br> <br>
                 </li>
               </div>
             </p>
