--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <img class="image" id="me" src="img/me_maroc.jpg">
                     </div>
                     <div class="flex-item flex-column">
-                        <h2>Romain Mottier</h2>
+                        <h2>Romain Mottier </h2> <br>
                         <p class="text">
                             PhD student in Applied Mathematics for Computational Physics<br>
                             romain.mottier@outlook.com<br>
